# FFmpegSandbox

./: .gitignore  CMakeLists.txt  README.md
application/avdevice/: CMakeLists.txt
application/avformat/: CMakeLists.txt
application/avformat/src/: avformat_main.cpp
application/experiments/avcodec/: CMakeLists.txt
application/experiments/avcodec/src/: avcodec_main.cpp
application/experiments/avdevice/src/: avdevice_main.cpp
application/experiments/avfilter/: CMakeLists.txt
application/experiments/avfilter/src/: avfilter_main.cpp
application/experiments/avutil/: CMakeLists.txt
application/experiments/avutil/src/: avutil_main.cpp
application/experiments/swresample/: CMakeLists.txt
application/experiments/swresample/src/: swresample_main.cpp
application/swscale/: CMakeLists.txt
application/swscale/src/: swscale_main.cpp
cmake/: CommonSettings.cmake
src/avcodec/: CMakeLists.txt  avcodec_main.cpp
src/avdevice/: CMakeLists.txt  avdevice_main.cpp
src/avfilter/: CMakeLists.txt  avfilter_main.cpp
src/avformat/: CMakeLists.txt  avformat_main.cpp
src/avutil/: CMakeLists.txt  avutil_main.cpp
src/swresample/: CMakeLists.txt  swresample_main.cpp
src/swscale/: CMakeLists.txt  swscale_main.cpp
